clusters/cluster0/kubernetes/apps/renovate/renovate/app/renovate-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate
  namespace: renovate
spec:
  hostnames:
  - renovate.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: renovate-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /webhook
